i changed it to stop overflowing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+html{
+    overflow-x: hidden;
+    
+}
+
 .firhead {
     background-color: lightblue;
     height: 800px;
@@ -12,6 +17,8 @@
 
 .header {
     display: flex;
+    justify-content: space-between;
+    width: 100vw;
 
 }
 
